# db/routes.go
@@ -2,15 +2,16 @@ package db
 
 import (
 	"context"
+	"log"
 	"speedliner-server/src/utils/structs"
 )
 
 // InsertRoute fügt eine neue Route in die DB ein
 func InsertRoute(route structs.Route) error {
 	_, err := Pool.Exec(context.Background(), `
-		INSERT INTO routes (id, from_system, to_system, price_per_m3, collateral_fee_percent, volume_max)
-		VALUES (gen_random_uuid(), $1, $2, $3, 0.03, 337000)
-	`, route.From, route.To, route.PricePerM3, route.CollateralFeePercent, route.VolumeMax)
+		INSERT INTO routes (id, from_system, to_system, price_per_m3)
+		VALUES (gen_random_uuid(), $1, $2, $3)
+	`, route.From, route.To, route.PricePerM3)
 	return err
 }
 
@@ -21,8 +22,9 @@ func UpdateRoute(route structs.Route) error {
 		SET from_system = $1,
 		    to_system = $2,
 		    price_per_m3 = $3
-		WHERE id = $6
-	`, route.From, route.To, route.PricePerM3, route.CollateralFeePercent, route.VolumeMax, route.ID)
+		WHERE id = $4
+	`, route.From, route.To, route.PricePerM3, route.ID)
+	log.Println(err, route)
 	return err
 }
 
@@ -37,7 +39,7 @@ func DeleteRoute(id string) error {
 // GetAllRoutes gibt alle Routen aus der DB zurück
 func GetAllRoutes() ([]structs.Route, error) {
 	rows, err := Pool.Query(context.Background(), `
-		SELECT id, from_system, to_system, price_per_m3, collateral_fee_percent, volume_max
+		SELECT id, from_system, to_system, price_per_m3
 		FROM routes
 	`)
 	if err != nil {
@@ -48,7 +50,7 @@ func GetAllRoutes() ([]structs.Route, error) {
 	var routes []structs.Route
 	for rows.Next() {
 		var r structs.Route
-		if err := rows.Scan(&r.ID, &r.From, &r.To, &r.PricePerM3, &r.CollateralFeePercent, &r.VolumeMax); err != nil {
+		if err := rows.Scan(&r.ID, &r.From, &r.To, &r.PricePerM3); err != nil {
 			return nil, err
 		}
 		routes = append(routes, r)
