# src/utils/structs/route.go
@@ -1,10 +1,8 @@
 package structs
 
 type Route struct {
-	ID                   string  `json:"id"`
-	From                 string  `json:"from"`
-	To                   string  `json:"to"`
-	PricePerM3           int     `json:"pricePerM3"`
-	CollateralFeePercent float64 `json:"collateralFeePercent"`
-	VolumeMax            int     `json:"volumeMax"`
+	ID         string `json:"id"`
+	From       string `json:"from"`
+	To         string `json:"to"`
+	PricePerM3 int    `json:"pricePerM3"`
 }
